--- a/backend/app/assets/stylesheets/spree/backend/components/_badges.scss
+++ b/backend/app/assets/stylesheets/spree/backend/components/_badges.scss
@@ -1,8 +1,8 @@
 // Blue
-.badge-info{
+.badge-info {
+  @include badge-variant($primary);
     color: white !important;
 }
-
 
 // Green
 .badge-completed,
