Remove BaseHelper#variant_options

--- a/frontend/app/views/spree/products/_cart_form.html.erb
+++ b/frontend/app/views/spree/products/_cart_form.html.erb
@@ -15,7 +15,7 @@
                 %>
                 <%= label_tag "variant_id_#{ variant.id }", class: "form-check-label" do %>
                   <span class="variant-description">
-                    <%= variant_options variant %>
+                    <%= variant.options_text %>
                   </span>
                   <% if variant_price variant %>
                     <span class="price diff"><%= variant_price variant %></span>
