--- a/backend/app/views/spree/admin/general_settings/edit.html.erb
+++ b/backend/app/views/spree/admin/general_settings/edit.html.erb
@@ -37,7 +37,7 @@
           <%#-------------------------------------------------%>
           <%# Clear cache                                     %>
           <%#-------------------------------------------------%>
-          <div class="card mb-3 cache">
+          <div class="card mb-3" id="general-settings-cache" data-hook="general_settings_cache">
             <div class="card-header">
               <h1 class="card-title mb-0 h5"><%= Spree.t(:clear_cache)%></h1>
             </div>
