Add id to currency card

--- a/backend/app/views/spree/admin/general_settings/edit.html.erb
+++ b/backend/app/views/spree/admin/general_settings/edit.html.erb
@@ -58,7 +58,7 @@
           <%#-------------------------------------------------%>
           <%# Currency Settings                               %>
           <%#-------------------------------------------------%>
-          <div class="card mb-3 currency">
+          <div class="card mb-3" id="general-settings-currency" data-hook="general_settings_currency">
             <div class="card-header">
               <h1 class="card-title mb-0 h5">
                 <%= Spree.t(:currency_settings)%>
