--- a/backend/app/views/spree/admin/promotions/_form.html.erb
+++ b/backend/app/views/spree/admin/promotions/_form.html.erb
@@ -56,12 +56,12 @@
 
     <div id="starts_at_field" class="form-group">
       <%= f.label :starts_at %>
-      <%= f.text_field :starts_at, value: datepicker_field_value(@promotion.starts_at), class: 'datepicker datepicker-from form-control' %>
+      <%= f.datetime_field :starts_at, class: 'form-control' %>
     </div>
 
     <div id="expires_at_field" class="form-group">
       <%= f.label :expires_at %>
-      <%= f.text_field :expires_at, value: datepicker_field_value(@promotion.expires_at), class: 'datepicker datepicker-to form-control' %>
+      <%= f.datetime_field :expires_at, class: 'form-control' %>
     </div>
   </div>
 </div>
