--- a/frontend/app/views/spree/address/_form.html.erb
+++ b/frontend/app/views/spree/address/_form.html.erb
@@ -56,11 +56,11 @@
          form.collection_select(:state_id, address.country.states,
                             :id, :name,
                             {include_blank: true},
-                            {class: have_states ? 'form-control' : 'form-control hidden',
+                            {class: have_states ? 'form-control' : 'hidden',
                             required: have_states,
                             disabled: !have_states}) +
          form.text_field(:state_name,
-                            class: !have_states ? 'form-control' : 'form-control hidden',
+                            class: !have_states ? 'form-control' : 'hidden',
                             required: !have_states,
                             disabled: have_states)
          ].join.gsub('"', "'").gsub("\n", "")
