--- a/backend/app/views/spree/admin/stores/_form.html.erb
+++ b/backend/app/views/spree/admin/stores/_form.html.erb
@@ -29,12 +29,11 @@
     <%= f.text_field :mail_from_address, class: 'form-control', required: true %>
     <%= f.error_message_on :mail_from_address %>
   <% end %>
-  <%# TODO: uncomment this and add support for default_currency in store %>
-  <%# <%= f.field_container :default_currency, class: ['form-group'] do %1> %>
-  <%#   <%= f.label :default_currency, Spree.t(:default_currency)  %1> %>
-  <%#   <%= f.text_field :default_currency, class: 'form-control' %1> %>
-  <%#   <%= f.error_message_on :default_currency %1> %>
-  <%# <% end %1> %>
+  <%= f.field_container :default_currency, class: ['form-group'] do %>
+    <%= f.label :default_currency, Spree.t(:default_currency) %>
+    <%= f.text_field :default_currency, class: 'form-control' %>
+    <%= f.error_message_on :default_currency %>
+  <% end %>
   <%= f.field_container :code, class: ['form-group'] do %>
     <%= f.label :code, Spree.t(:code)  %>
     <%= f.text_field :code, class: 'form-control', required: true %>
