--- a/backend/app/views/spree/admin/stores/index.html.erb
+++ b/backend/app/views/spree/admin/stores/index.html.erb
@@ -11,6 +11,7 @@
     <thead>
       <th><%= Spree.t(:name) %></th>
       <th><%= Spree.t(:url) %></th>
+      <th><%= Spree.t(:currency) %></th>
       <th data-hook="admin_stores_index_header_actions" class="actions"></th>
     <thead>
     <tbody>
@@ -18,6 +19,7 @@
         <tr>
           <td><%= store.name %></td>
           <td><%= store.url %></td>
+          <td><%= store.default_currency %></td>
           <td class="actions actions-2 text-center" data-hook="admin_stores_index_row_actions">
             <% if store.default %>
               <%= button_link_to(Spree.t(:store_default), '#', class: 'btn-success btn-sm') %>
