--- a/backend/app/views/spree/admin/promotions/actions/_create_adjustment.html.erb
+++ b/backend/app/views/spree/admin/promotions/actions/_create_adjustment.html.erb
@@ -1,14 +1,15 @@
 <div class="card-body calculator-fields">
   <div class="row mb-0">
-    <div class="form-group col-12 col-md-6 mb-0">
+    <div class="form-group col-12 mb-0">
       <% field_name = "#{param_prefix}[calculator_type]" %>
       <%= label_tag field_name, Spree.t(:calculator) %>
       <%= select_tag field_name,
                      options_from_collection_for_select(@calculators, :to_s, :description, promotion_action.calculator.type),
                      class: 'type-select select2' %>
+      <hr />
     </div>
     <% unless promotion_action.new_record? %>
-      <div class="form-group col-12 col-md-6 mb-0 settings">
+      <div class="form-group col-12 mb-0 settings">
         <% type_name = promotion_action.calculator.type.demodulize.underscore %>
         <% if lookup_context.exists?("fields",
             ["spree/admin/promotions/calculators/#{type_name}"], true) %>
