--- a/backend/app/views/spree/admin/promotions/calculators/tiered_flat_rate/_fields.html.erb
+++ b/backend/app/views/spree/admin/promotions/calculators/tiered_flat_rate/_fields.html.erb
@@ -24,6 +24,7 @@
   <div class="tier card mb-3">
     <div class="card-body p-3">
       <div class="form-group">
+        <label><%= Spree.t(:order_total) %></label>
         <div class="input-group">
           <div class="input-group-prepend">
             <div class="input-group-text">$</div>
@@ -32,6 +33,7 @@
         </div>
       </div>
       <div class="form-group">
+        <label><%= Spree.t(:discount_amount) %></label>
         <div class="input-group">
           <div class="input-group-prepend">
             <div class="input-group-text">$</div>
