--- a/backend/app/views/spree/admin/promotions/actions/_create_item_adjustments.html.erb
+++ b/backend/app/views/spree/admin/promotions/actions/_create_item_adjustments.html.erb
@@ -4,18 +4,20 @@
       <% field_name = "#{param_prefix}[calculator_type]" %>
       <%= label_tag field_name, Spree.t(:calculator) %>
       <%= select_tag field_name,
-                    options_from_collection_for_select(Spree::Promotion::Actions::CreateItemAdjustments.calculators, :to_s, :description, promotion_action.calculator.type),
-                    class: 'type-select select2' %>
+                     options_from_collection_for_select(@calculators, :to_s, :description, promotion_action.calculator.type),
+                     class: 'type-select select2' %>
       <hr />
     </div>
     <% unless promotion_action.new_record? %>
       <div class="form-group col-12 mb-0 settings">
-        <% promotion_action.calculator.preferences.keys.map do |key| %>
-          <% field_name = "#{param_prefix}[calculator_attributes][preferred_#{key}]" %>
-          <%= label_tag field_name, Spree.t(key.to_s) %>
-          <%= preference_field_tag(field_name,
-                                   promotion_action.calculator.get_preference(key),
-                                   type: promotion_action.calculator.preference_type(key)) %>
+        <% type_name = promotion_action.calculator.type.demodulize.underscore %>
+        <% if lookup_context.exists?("fields",
+            ["spree/admin/promotions/calculators/#{type_name}"], true) %>
+          <%= render "spree/admin/promotions/calculators/#{type_name}/fields",
+            calculator: promotion_action.calculator, prefix: param_prefix %>
+        <% else %>
+          <%= render "spree/admin/promotions/calculators/default_fields",
+            calculator: promotion_action.calculator, prefix: param_prefix %>
         <% end %>
         <%= hidden_field_tag "#{param_prefix}[calculator_attributes][id]", promotion_action.calculator.id %>
       </div>
