use better text

--- a/backend/app/assets/stylesheets/spree/backend/shared/_forms.scss
+++ b/backend/app/assets/stylesheets/spree/backend/shared/_forms.scss
@@ -13,6 +13,9 @@ span.or {
 }
 
 .form-group {
+  .variant_autocomplete {
+    width:100%;
+  }
   &.withError {
     label, .formError, .required {
       color: $danger;
