--- a/backend/app/views/spree/admin/promotions/actions/_create_line_items.html.erb
+++ b/backend/app/views/spree/admin/promotions/actions/_create_line_items.html.erb
@@ -11,15 +11,15 @@
     <% line_items.build %>
 
     <% line_items.each_with_index do |line_item, index| %>
-      <div class="add-line-item">
+      <div class="add-line-item row">
         <% line_item_prefix = "#{param_prefix}[promotion_action_line_items_attributes][#{index}]" %>
-        <div class="form-group">
-          <%= label_tag "#{line_item_prefix}_variant_id", Spree.t(:variant) %>
-          <%= hidden_field_tag "#{line_item_prefix}[variant_id]", line_item.variant_id, class: "variant_autocomplete" %>
-        </div>
-        <div class="form-group mb-0">
+        <div class="form-group col-6">
           <%= label_tag "#{line_item_prefix}_quantity", Spree.t(:quantity) %>
           <%= number_field_tag "#{line_item_prefix}[quantity]", line_item.quantity, min: 1, class: 'form-control' %>
+        </div>
+        <div class="form-group col-6">
+          <%= label_tag "#{line_item_prefix}_variant_id", Spree.t(:variant) %><br>
+          <%= hidden_field_tag "#{line_item_prefix}[variant_id]", line_item.variant_id, class: "variant_autocomplete" %>
         </div>
       </div>
     <% end %>
