Allow old version of flat rate to be accesable still.

--- a/backend/app/views/spree/admin/promotions/actions/_create_adjustment.html.erb
+++ b/backend/app/views/spree/admin/promotions/actions/_create_adjustment.html.erb
@@ -1,4 +1,4 @@
-<div class="card-body calculator-fields pb-0">
+<div class="card-body calculator-fields">
   <div class="row mb-0">
     <div class="form-group col-12 mb-0">
 
