--- a/backend/app/views/spree/admin/promotions/actions/_create_item_adjustments.html.erb
+++ b/backend/app/views/spree/admin/promotions/actions/_create_item_adjustments.html.erb
@@ -2,7 +2,7 @@
   <div class="row mb-0">
     <div class="form-group col-12 mb-0">
       <% field_name = "#{param_prefix}[calculator_type]" %>
-      <%= label_tag field_name, Spree.t(:calculator) %>
+      <%= label_tag field_name, Spree.t(:discount_line_items_using) %>
       <%= select_tag field_name,
                      options_from_collection_for_select(@calculators, :to_s, :description, promotion_action.calculator.type),
                      class: 'type-select select2' %>
