Fixed glyphicons urls for production builds

--- a/backend/app/assets/stylesheets/spree/backend/spree_admin.css.scss
+++ b/backend/app/assets/stylesheets/spree/backend/spree_admin.css.scss
@@ -2,6 +2,7 @@
 
 @import 'bootstrap';
 @import 'glyphicons';
+@import 'shared/glyphicons_urls_fix';
 
 @import 'components/navbar';
 @import 'components/sidebar';
