Fix some issues with the address Javascript and unify formatting.

--- a/backend/app/views/spree/admin/countries/_form.html.erb
+++ b/backend/app/views/spree/admin/countries/_form.html.erb
@@ -29,4 +29,10 @@
       <%= Spree.t(:states_required) %>
     </label>
   </div>
+  <div data-hook="zipcode_required" class="form-group checkbox">
+    <label>
+      <%= f.check_box :zipcode_required %>
+      <%= Spree.t(:zipcode_required) %>
+    </label>
+  </div>
 </div>
