--- a/frontend/app/views/spree/products/show.html.erb
+++ b/frontend/app/views/spree/products/show.html.erb
@@ -1,13 +1,13 @@
 <% @body_id = 'product-details' %>
 
 <% cache cache_key_for_product do %>
-  <div data-hook="product_show" class="row" itemscope itemtype="https://schema.org/Product">
+  <div data-hook="product_show" class="row">
     <div class="col-lg-4 col-md-5" data-hook="product_left_part">
       <div data-hook="product_left_part_wrap">
         <div id="product-images" data-hook="product_images">
           <div id="main-image" class="card  " data-hook>
             <div class="card-body text-center">
-              <%= product_image(@product, itemprop: "image") %>
+              <%= product_image(@product) %>
             </div>
           </div>
           <div id="thumbnails" data-hook>
@@ -28,9 +28,9 @@
     <div class="col-lg-8 col-md-7" data-hook="product_right_part">
       <div data-hook="product_right_part_wrap">
         <div id="product-description" data-hook="product_description">
-          <h1 class="product-title mt-2" itemprop="name"><%= @product.name %></h1>
+          <h1 class="product-title mt-2"><%= @product.name %></h1>
 
-          <div itemprop="description" data-hook="description">
+          <div data-hook="description">
             <%= sanitize product_description(@product) %>
           </div>
 
