--- a/backend/app/views/spree/admin/shared/_account_nav.html.erb
+++ b/backend/app/views/spree/admin/shared/_account_nav.html.erb
@@ -1,73 +1,79 @@
 <% if try_spree_current_user %>
-  <ul class="nav navbar-nav align-items-end h-100 justify-content-center">
-    <li class="dropdown user user-menu h-100">
-      <div class="dropdown d-flex align-items-center h-100">
-        <button class="dropdown-toggle btn btn-link text-white h-100" data-toggle="dropdown">
+
+<div class="btn-group">
+  <button type="button" class="btn dropdown-toggle text-light pr-0" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    <i class="glyphicon glyphicon-user"></i>
+    <span class="d-none d-md-inline"><%= try_spree_current_user.email %></span>
+  </button>
+  <div class="dropdown-menu dropdown-menu-right">
+
+    <% if spree.respond_to? :root_path %>
+      <button class="dropdown-item" type="button">
+        <%= link_to spree.root_path, target: :blank, class: 'd-block text-dark py-2 px-4' do %>
+          <i class="glyphicon glyphicon-new-window"></i>
+          &nbsp;
+          <%= Spree.t(:back_to_store) %>
+        <% end %>
+      </button>
+    <% end %>
+
+    <% if can?(:manage, try_spree_current_user) %>
+      <button class="dropdown-item" type="button">
+        <%= link_to spree.edit_admin_user_path(try_spree_current_user), class: 'd-block text-dark py-2 px-4' do %>
           <i class="glyphicon glyphicon-user"></i>
-          <span>
-            <%= try_spree_current_user.email %> <i class="caret"></i>
-          </span>
-        </button>
+          &nbsp;
+          <%= Spree.t(:account) %>
+        <% end %>
+      </button>
+    <% end %>
 
-        <ul class="dropdown-menu position-absolute mt-0 rounded-0 border-top-0">
-          <% if spree.respond_to? :root_path %>
-            <li class="dropdown-item p-0">
-              <%= link_to spree.root_path, target: :blank, class: 'd-block text-dark py-2 px-4' do %>
-                <i class="glyphicon glyphicon-new-window"></i>
-                &nbsp;
-                <%= Spree.t(:back_to_store) %>
-              <% end %>
-            </li>
-          <% end %>
+    <% if spree.respond_to? :admin_logout_path %>
+      <button class="dropdown-item" type="button">
+        <%= link_to spree.admin_logout_path, class: 'd-block text-dark py-2 px-4' do %>
+          <i class="glyphicon glyphicon-log-out"></i>
+          &nbsp;
+          <%= Spree.t(:logout) %>
+        <% end %>
+      </button>
+    <% end %>
 
-          <% if can?(:manage, try_spree_current_user) %>
-            <li class="dropdown-item p-0">
-              <%= link_to spree.edit_admin_user_path(try_spree_current_user), class: 'd-block text-dark py-2 px-4' do %>
-                <i class="glyphicon glyphicon-user"></i>
-                &nbsp;
-                <%= Spree.t(:account) %>
-              <% end %>
-            </li>
-          <% end %>
+    <div class="dropdown-divider"></div>
 
-          <% if spree.respond_to? :admin_logout_path %>
-            <li class="dropdown-item p-0">
-              <%= link_to spree.admin_logout_path, class: 'd-block text-dark py-2 px-4' do %>
-                <i class="glyphicon glyphicon-log-out"></i>
-                &nbsp;
-                <%= Spree.t(:logout) %>
-              <% end %>
-            </li>
-          <% end %>
+    <button class="dropdown-item" type="button">
+      <%= link_to 'http://guides.spreecommerce.org', target: :blank, class: 'd-block text-dark py-2 px-4' do %>
+        <i class="glyphicon glyphicon-info-sign"></i>
+        &nbsp;
+        <%= Spree.t(:help_center) %>
+      <% end %>
+    </button>
 
-          <div class="dropdown-divider"></div>
+    <button class="dropdown-item" type="button">
+      <%= link_to 'http://slack.spreecommerce.org', target: :blank, class: 'd-block text-dark py-2 px-4' do %>
+        <i class="glyphicon glyphicon-comment"></i>
+        &nbsp;
+        <%= Spree.t(:join_slack) %>
+      <% end %>
+    </button>
 
-          <li class="dropdown-item p-0">
-            <%= link_to 'http://guides.spreecommerce.org', target: :blank, class: 'd-block text-dark py-2 px-4' do %>
-              <i class="glyphicon glyphicon-info-sign"></i>
-              &nbsp;
-              <%= Spree.t(:help_center) %>
-            <% end %>
-          </li>
+    <button class="dropdown-item" type="button">
+      <%= link_to 'https://github.com/spree-contrib', target: :blank, class: 'd-block text-dark py-2 px-4' do %>
+        <i class="glyphicon glyphicon-download"></i>
+        &nbsp;
+        <%= Spree.t(:extensions_directory) %>
+      <% end %>
+    </button>
 
-          <li class="dropdown-item p-0">
-            <%= link_to 'http://slack.spreecommerce.org', target: :blank, class: 'd-block text-dark py-2 px-4' do %>
-              <i class="glyphicon glyphicon-comment"></i>
-              &nbsp;
-              <%= Spree.t(:join_slack) %>
-            <% end %>
-          </li>
+  </div>
+</div>
 
-          <li class="dropdown-item p-0">
-            <%= link_to 'https://github.com/spree-contrib', target: :blank, class: 'd-block text-dark py-2 px-4' do %>
-              <i class="glyphicon glyphicon-download"></i>
-              &nbsp;
-              <%= Spree.t(:extensions_directory) %>
-            <% end %>
-          </li>
-        </ul>
-      </div>
 
-    </li>
-  </ul>
+
+
+
+
+
+
+
+
+
 <% end %>
