Fix code climate issues.

--- a/backend/app/views/spree/admin/shared/_header.html.erb
+++ b/backend/app/views/spree/admin/shared/_header.html.erb
@@ -23,7 +23,7 @@
       ) %>
     </div>
 
-    <div class="col-3 col-lg-4 text-right">
+    <div class="col-3 col-sm-4 text-right">
       <%= render partial: 'spree/admin/shared/account_nav' %>
     </div>
   </nav>
