--- a/backend/app/assets/stylesheets/spree/backend/components/_sidebar.scss
+++ b/backend/app/assets/stylesheets/spree/backend/components/_sidebar.scss
@@ -52,7 +52,7 @@
     }
 
     body.sidebar-open {
-
+      overflow-x: hidden;
       #main-sidebar {
         right:0;
         transition: 0.3s ease;
