Use better setup for nav draw, remove body scroll lock.

--- a/backend/app/assets/stylesheets/spree/backend/components/_main.scss
+++ b/backend/app/assets/stylesheets/spree/backend/components/_main.scss
@@ -7,3 +7,11 @@
   width: auto;
   height: 40px;
 }
+
+#multi-backdrop {
+  z-index: 0;
+}
+
+body.modal-open #multi-backdrop {
+  z-index: 1040;
+}
