--- a/backend/app/views/spree/admin/shared/_account_nav.html.erb
+++ b/backend/app/views/spree/admin/shared/_account_nav.html.erb
@@ -4,7 +4,7 @@
     <i class="glyphicon glyphicon-user"></i>
     <span class="d-none d-md-inline"><%= try_spree_current_user.email %></span>
   </button>
-  <div class="dropdown-menu dropdown-menu-right">
+  <div class="dropdown-menu dropdown-menu-right mt-2">
 
     <% if spree.respond_to? :root_path %>
       <button class="dropdown-item" type="button">
