--- a/backend/app/views/spree/admin/shared/_header.html.erb
+++ b/backend/app/views/spree/admin/shared/_header.html.erb
@@ -3,16 +3,12 @@
   <nav class="navbar fixed-top navbar-dark align-items-middle" role="navigation">
     <div class="col-3 col-sm-4 p-0 d-lg-none">
       <button
-        id="sidebar-toggle"
-        class="navbar-toggler h-100 mr-3 "
+        id="sidebar-open"
+        class="navbar-toggler h-100"
         type="button"
         aria-expanded="false"
         aria-label="Toggle navigation">
-        <div id="nav-icon">
-          <span></span>
-          <span></span>
-          <span></span>
-        </div>
+        <span class="navbar-toggler-icon"></span>
       </button>
     </div>
     <div class="col text-center text-lg-left">
