--- a/backend/app/views/spree/layouts/admin.html.erb
+++ b/backend/app/views/spree/layouts/admin.html.erb
@@ -81,6 +81,7 @@
     <%#-------------------------------------------------%>
     <%# Insert footer scripts here                      %>
     <%#-------------------------------------------------%>
+    <div id="multi-backdrop" class="modal-backdrop fade"></div>
     <div data-hook="admin_footer_scripts"></div>
   </body>
 </html>
