--- a/backend/app/views/spree/admin/shared/_main_menu.html.erb
+++ b/backend/app/views/spree/admin/shared/_main_menu.html.erb
@@ -1,8 +1,8 @@
 <nav>
-  <div class="text-right d-lg-none">
+  <div class="text-right d-lg-none p-2 border-bottom">
     <button
       id="sidebar-close"
-      class="mt-2 mr-2 btn btn-outline-secondary"
+      class="btn btn-outline-secondary"
       type="button"
       aria-expanded="false"
       aria-label="Toggle navigation">
