fix issue with page dim

--- a/backend/app/assets/stylesheets/spree/backend/components/_main.scss
+++ b/backend/app/assets/stylesheets/spree/backend/components/_main.scss
@@ -10,8 +10,12 @@
 
 #multi-backdrop {
   z-index: 0;
+  height: 0;
+  width: 0;
 }
 
 body.modal-open #multi-backdrop {
   z-index: 1040;
+  width: 100vw;
+  height: 100vh;
 }
