--- a/backend/app/assets/stylesheets/spree/backend/components/_sidebar.scss
+++ b/backend/app/assets/stylesheets/spree/backend/components/_sidebar.scss
@@ -83,7 +83,7 @@ aside#main-sidebar {
     }
 }
 
-// Tablets down
+// Phones down
 @media (max-width: 576px) {
     aside#main-sidebar {
       width: 100%;
